refactor(module type): add checks for registered modules types in save and saveAll methods